update on part.js, sess,js
